@@ -1,3 +1,8 @@
+Tue Oct 02 18:31:54 BST 2007  Richard Boulton <richard@lemurconsulting.com>
+
+	* xappy/searchconnection.py: Minor correction to a documentation
+	  comment.
+
 Tue Oct 02 18:03:31 BST 2007  Richard Boulton <richard@lemurconsulting.com>
 
 	* xappy/searchconnection.py: Add query_adjust(), allowing the
